# DotWarsRustGame

./: Cargo.toml  README.md
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/battle/: Cargo.toml
crates/battle/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: lib.rs
crates/save_system/: Cargo.toml
crates/save_system/src/: lib.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/ui_simple/: Cargo.toml
crates/ui_simple/src/: lib.rs.backup  lib_clean.rs  lib_new.rs  lib_old.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
src/: game_state.rs  main.rs  plugins.rs
